<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:orientation="vertical">

        <EditText
            android:id="@+id/transfer_data_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Hmm"
            />
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            tools:ignore="MissingConstraints">
            <CheckBox
                android:id="@+id/checkbox_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:text="@string/s1"/>
            <CheckBox
                android:id="@+id/checkbox_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:text="@string/s2"/>
        </GridLayout>
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            tools:ignore="MissingConstraints">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:text="@string/activity_open"
                android:onClick="onDialogClick"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:text="@string/app_exit"
                android:onClick="onExitCLick"/>
        </GridLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_edit"
            android:onClick="onEditDialogCLick"/>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>